# minecraft-auto-angler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
auto-angler/: auto-angler.py  auto_fish_gui.py  cursor_camera.py  cursor_image.py  cursor_locator.py  image_viewer.py
autoangler/: __init__.py  __main__.py  analyze_image.py  async_pipeline.py  audio_probe.py  capture_backend.py  cursor_camera.py  cursor_image.py  cursor_locator.py  experiment_harness.py  gui_tk.py  image_viewer_tk.py  line_detector.py  line_watcher.py  logging_utils.py  macos_minecraft_audio_capture  macos_minecraft_audio_capture.swift  minecraft_window.py  pause_menu_detector.py  profile_session.py  profiling.py  rod_detector.py  roi.py  runtime_config.py  screen.py  session_recorder.py  ui_snapshot.py
docs/: audio-detector-test-data.md
scripts/: profile_flamegraph.sh
tests/: test_analyze_image.py  test_assets.py  test_async_pipeline.py  test_audio_data_plan.py  test_audio_probe.py  test_capabilities_integration.py  test_capabilities_unit.py  test_capture_backend.py  test_cursor_camera.py  test_experiment_harness.py  test_gui_capture_policy.py  test_gui_preview.py  test_gui_tracking_box.py  test_idle_preview.py  test_image_viewer_tk.py  test_lab_config.py  test_lab_runtime.py  test_line_detector.py  test_line_watcher.py  test_logging_and_ui.py  test_main.py  test_makefile.py  test_minecraft_window.py  test_pause_menu_detector.py  test_profile_session.py  test_profiling.py  test_recording.py  test_rod_detector.py  test_roi.py  test_session_recorder.py  (+1 more)
(+7 files in other folders)
